maze.lessons.maze.pledge.PledgeMaze.scala.code
override def run() {
		var j:Direction = getDirection();
		while (!estSurBiscuit()) {
		if (!estFaceMur()) {
			progresser(j);
		}
		else if (estFaceMur()) {
			suivreMur();
		}
	prendBiscuit();
}
}

def keepHandOnSideWall():Boolean = {
 	gauche();
 	var flag = estFaceMur();
 	droite();
 	return flag;
 }
def progresser(dir:Direction) = {
	setDirection(dir);
	while(!estFaceMur) avance();
}

def suivreMur() = {
	var i:Int = 0;
	droite();
	i = i+1;
	while (i != 0) {
		if (estfacemur) {
			droite();
			i = i+1;
		}
		else if (keepHandOnSideWall()) avance();
		else {
			gauche();
			avance();
			i = i-1;
		}
	}
}